--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -50,6 +50,8 @@ header nav .ham input {
   header nav ul {
     width: 100%;
     position: fixed;
+    z-index: 1;
+    background-color: white;
     top: -100%;
     left: 0;
     padding: 2rem 1.5rem 4rem;
