--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,8 +1,31 @@
+@use "src/styles/base" as *;
+
+.sticky-2 {
+  position: fixed;
+  z-index: 1;
+  translate: 0 0 !important;
+  width: 100vw;
+}
+.add-translate {
+  translate: 0 -200px;
+}
+
+header {
+  // transition: translate $transition;
+}
 header nav {
+  background-color: $bg-secondary;
+  transition: translate $transition;
+}
+header nav .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+}
+@media (max-width:768px){
+  header nav .container{
+    padding: 1rem;
+  }
 }
 
 header nav ul {
@@ -10,10 +33,10 @@ header nav ul {
   gap: 2rem;
   text-align: center;
 }
-@media (max-width:1140px){
-    header nav ul{
-        gap: 1rem;
-    }
+@media (max-width: 1140px) {
+  header nav ul {
+    gap: 1rem;
+  }
 }
 
 header nav li {
@@ -22,7 +45,7 @@ header nav li {
 header nav a {
   text-transform: capitalize;
   &:not(header nav > a):hover {
-    color: blue;
+    color: $color-accent;
   }
 }
 header nav a .nav__icon {
@@ -52,11 +75,11 @@ header nav .ham input {
     position: fixed;
     z-index: 1;
     background-color: white;
-    top: -100%;
+    top: -100vh;
     left: 0;
     padding: 2rem 1.5rem 4rem;
     transition: 0.3s ease-in-out;
-    border-radius: 0 0 1.5rem 1.5rem ;
+    border-radius: 0 0 1.5rem 1.5rem;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
     display: grid;
     grid-template-rows: repeat(2, 1fr);
@@ -75,4 +98,3 @@ header nav .ham input {
     top: 58px;
   }
 }
-
