--- a/src/styles/components/Hero/_tech-stack.scss
+++ b/src/styles/components/Hero/_tech-stack.scss
@@ -1,9 +1,10 @@
+@use "src/styles/base" as *;
 .tech-stack {
     display: flex;
     align-items: center;
     position: absolute;
-    left: 18px;
-    bottom: 0;
+    left: 10px;
+    bottom: -6rem;
     gap: 1rem;
     font-size: 2rem;
   }
@@ -14,10 +15,18 @@
     margin-top: 1rem;
     gap: 1rem;
   }
+  .tech-stack ul li{
+    transition: translate $transition;
+  }
+  .tech-stack ul li:hover{
+    translate: 0 -1rem;
+
+  }
   @media (max-width: 992px) {
     .tech-stack {
       flex-direction: column;
       left: 50%;
+      bottom: -4rem;
       translate: -50% 50%;
     }
     .breaker{
