--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,5 +1,6 @@
+@use "/src/styles/base/" as *;
 footer{
-    background-color: black;
+    background-color: $black-0;
     color: white;
     padding-bottom: 2rem;
 }
