--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,3 +1,4 @@
+
 * {
     margin: 0;
     padding: 0;
@@ -9,8 +10,9 @@ li {
 }
 a{
     text-decoration: none;
-    color: black;
+    color: var(--color-primary);
 }
+
 
 //  utilities
 .container{
