--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,9 +1,34 @@
+@use "/src/styles/base/" as *;
 .btn {
-  background-color: black;
+  background-color: var(--color-accent);
   border-radius: 15px;
   color: white;
   display: inline-block;
   margin-top: 1rem;
   padding: 0.5rem 1.5rem;
   border: none;
+  transition: background-color $transition;
+  &:hover {
+    background-color: var(--color-accent-secondary);
+  }
+}
+
+.theme-switcher {
+  position: fixed;
+  bottom: 50px;
+  left: 50px;
+  border: none;
+  outline: none;
+  background-color: var(--color-accent);
+  border-radius: 50%;
+  color: white;
+  cursor: pointer;
+  font-size: 26px;
+  width: 60px;
+  height: 60px;
+  z-index: 999;
+  transition: all 0.3s ease;
+  &:hover{
+    background-color: var(--color-accent-secondary);
+  }
 }
