--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -4,7 +4,8 @@
   height: 100vh;
   margin-left: auto;
   margin-right: auto;
-  background-color: $bg-primary;
+  background-color: var(--bg-primary);
+  color: var(--color-primary);
 }
 @media (max-width:768px){
   .hero{
@@ -37,6 +38,7 @@
 .hero-content h2 {
   font-size: 2rem;
   text-transform: capitalize;
+  // color: var(--color-primary);
 }
 @media (max-width: 992px) {
   .hero-content {
