--- a/src/styles/components/_filter.scss
+++ b/src/styles/components/_filter.scss
@@ -1,3 +1,4 @@
+@use "/src/styles/base/" as *;
 .filter-bar {
   text-align: center;
 }
@@ -6,16 +7,15 @@
   border: 1px solid transparent;
   padding: 0.5rem 1rem;
   border-radius: 10px;
-  background-color: black;
+  background-color: $black-0;
   color: white;
+  font-size: 18px;
   cursor: pointer;
   &:hover {
-    background-color: white;
-    color: black;
-    border-color: black;
+    background-color: var(--color-accent);
   }
 }
 
 .filter-bar .selected {
-  background-color: blue;
+  background-color: var(--color-accent);
 }
