--- a/src/styles/components/Hero/_tech-stack.scss
+++ b/src/styles/components/Hero/_tech-stack.scss
@@ -1,15 +1,17 @@
 @use "src/styles/base" as *;
 .tech-stack {
+  flex: 0  0 100%;
+  margin-top: 100px;
+  order: 4;
   display: flex;
   align-items: center;
-  position: absolute;
-  bottom: -6rem;
   gap: 1rem;
   font-size: 2rem;
 }
 
 .tech-stack ul {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   margin-top: 1rem;
   gap: 1rem;
@@ -32,9 +34,9 @@
 @media (max-width: 992px) {
   .tech-stack {
     flex-direction: column;
-   
+    order: -1;
     bottom: -4rem;
-    translate: -50% 50%;
+    margin-top: 50px ;
   }
   .stack-get-from-side {
     left: 50% !important;
