--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,7 +1,7 @@
 //--------[Hero]-------------
 @use "src/styles/base" as *;
 .hero {
-  height: 100vh;
+  min-height: 100vh;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--bg-primary);
@@ -10,7 +10,7 @@
 }
 @media (max-width:768px){
   .hero{
-    height: 142vh;
+    // height: 142vh;
   }
 }
 .hero-wrapper {
@@ -18,10 +18,16 @@
   justify-content: space-between;
   position: relative;
 }
+.hero .hero-wrapper{
+  flex-wrap: wrap;
+
+}
+
 @media (max-width: 992px) {
   .hero-wrapper {
     flex-direction: column-reverse;
     align-items: center;
+    text-align: center;
     gap: 2rem;
   }
 }
