--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -42,6 +42,7 @@ section > .container {
 .achieved {
   margin: 1rem 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 
   gap: 1rem;
