--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -32,7 +32,7 @@ header nav .container {
 }
 @media (max-width: 768px) {
   header nav .container {
-    padding: 1rem;
+    padding: 1rem 2rem;
   }
 }
 
