--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -1,7 +1,7 @@
 //--------[Hero]-------------
 @use "src/styles/base" as *;
 .hero {
-  min-height: 100vh;
+  // min-height: 100vh;
   margin-left: auto;
   margin-right: auto;
   background-color: var(--bg-primary);
@@ -46,6 +46,10 @@
   font-size: 2rem;
   text-transform: capitalize;
   // color: var(--color-primary);
+}
+@media (max-width:643px){
+  .hero-content h1{font-size:2.5rem;}
+  .hero-content h2{font-size:1.5rem;}
 }
 @media (max-width: 992px) {
   .hero-content {
