--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -20,6 +20,7 @@ section > .container {
   font-size: 2rem;
   margin-bottom: 2rem;
   text-align: center;
+  text-transform: capitalize;
   color: $blue-0;
 }
 
