--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -15,10 +15,12 @@ a{
     text-decoration: none;
     color: var(--color-primary);
 }
-section {
-    overflow-x:hidden;  
+// section {
+//     overflow-x:hidden;  
+// }
+body{
+    overflow-x: hidden;
 }
-
 
 
 //  utilities
@@ -28,6 +30,7 @@ section {
     padding-right: 1rem;
     margin-left: auto;
     margin-right: auto;
+    overflow-x: hidden;
 }
 
 @media screen and (min-width: 768px){
