feat: add Skills section boiler Plate

--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -16,7 +16,8 @@ section > .container {
 }
 .about h2,
 .projects h2,
-.contact h2 {
+.contact h2,
+.skills h2 {
   font-size: 2rem;
   margin-bottom: 2rem;
   text-align: center;
