--- a/src/styles/layout/_index.scss
+++ b/src/styles/layout/_index.scss
@@ -1,6 +1,7 @@
 @forward "./header";
 @forward "./hero";
 @forward "./about";
+@forward "./skills";
 @forward "./projects";
 @forward "./contact";
 @forward "./footer";
