--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  background-color: var(--bg-secondary);
+  background-color: var(--bg-primary);
   padding-bottom: 5rem;
 }
 // send Message
