--- a/src/styles/layout/_projects.scss
+++ b/src/styles/layout/_projects.scss
@@ -1,6 +1,6 @@
 @use "src/styles/base" as *;
 .projects {
-  background-color: var(--bg-primary);
+  background-color: var(--bg-secondary);
 }
 // Projects Gallery
 .projects-gallery {
@@ -20,7 +20,7 @@
 
 .project-card,
 .project-card > * {
-  background-color: var(--bg-secondary);
+  background-color: #444;
   color: var(--color-primary);
 }
 .project-img-wrapper {
