fix(social): fix scroll on hover

--- a/src/styles/components/_social-icons.scss
+++ b/src/styles/components/_social-icons.scss
@@ -4,6 +4,7 @@
   justify-content: start;
   gap: 1rem;
   font-size: 30px;
+  overflow: hidden;
   margin-top: 1rem;
   & a {
     transition: color $transition,
