--- a/src/styles/layout/_index.scss
+++ b/src/styles/layout/_index.scss
@@ -3,5 +3,6 @@
 @forward "./about";
 @forward "./skills";
 @forward "./projects";
+@forward "./experience";
 @forward "./contact";
 @forward "./footer";
