--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -17,7 +17,8 @@ section > .container {
 .about h2,
 .projects h2,
 .contact h2,
-.skills h2 {
+.skills h2,
+.experience h2 {
   font-size: 2.5rem;
   margin-bottom: 2rem;
   text-align: center;
