--- a/src/styles/layout/_index.scss
+++ b/src/styles/layout/_index.scss
@@ -3,6 +3,7 @@
 @forward "./about";
 @forward "./skills";
 @forward "./projects";
+@forward "./open-source";
 @forward "./experience";
 @forward "./contact";
 @forward "./footer";
