--- a/src/styles/layout/_index.scss
+++ b/src/styles/layout/_index.scss
@@ -5,5 +5,6 @@
 @forward "./projects";
 @forward "./open-source";
 @forward "./experience";
+@forward "./testimonials";
 @forward "./contact";
 @forward "./footer";
